--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -218,7 +218,7 @@
         "m = X[0]\n",
         "n = X[1]\n",
         "result =[]\n",
-        "for i in range(m,n):\n",
+        "for i in range(m,n+1):\n",
         "  a= str(i)\n",
         "  if int(a[0]) % 2 == 0 and int(a[1]) % 2 == 0 and int(a[2]) % 2 == 0 and int(a[3]) % 2 == 0:\n",
         "    result.append(i)\n",
